<resources>
    <string name="app_name">client</string>
    <string name="send_msg_btn">Send Message</string>
    <string name="send_msg_hint">Message to send</string>
    <string name="connect_btn">Connect</string>
    <string name="connection_status_text">Disconnected</string>
    <string name="settings_btn">Settings</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_save_changes_btn_text">SAVE CHANGES</string>
    <string name="settings_back_btn_text">BACK</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="settings_ip_input_hint">Server IP</string>
    <string name="settings_ip_port_hint">Port</string>
    <string name="recv_msg_text">Message from server: </string>
    <string name="empty"/>
    <string name="ip_status_text"><![CDATA[<IP ADDRESS>]]></string>
    <string name="port_status_text"><![CDATA[<PORT>]]></string>
</resources>